small fixes + respin 390